Fix economic indicator, docs-check. home menu. (#7)
