# src/sandbox/api/fx/economicIndicatorApi.ts
@@ -18,10 +18,10 @@ export const searchEconomicIndicators = async (
 
 export const getEconomicIndicator = async (
   countryCode: string,
-  id: number
+  code: string
 ): Promise<EconomicIndicatorDto> => {
   const res = await sandboxApi.get<EconomicIndicatorDto>(
-    `/v1/fx/economic-indicator/${countryCode}/${id}`
+    `/v1/fx/economic-indicator/${countryCode}/${code}`
   )
   return res.data
 }
@@ -32,10 +32,10 @@ export const insertEconomicIndicator = async (dto: EconomicIndicatorDto): Promis
 
 export const updateEconomicIndicator = async (
   countryCode: string,
-  id: number,
+  code: string,
   dto: EconomicIndicatorDto
 ): Promise<void> => {
-  await sandboxApi.put(`/v1/fx/economic-indicator/${countryCode}/${id}`, { indicator: dto })
+  await sandboxApi.put(`/v1/fx/economic-indicator/${countryCode}/${code}`, { indicator: dto })
 }
 
 export const fetchCountryList = async (): Promise<KeyValue[]> => {
